# cargo-align

./: Cargo.toml  LICENSE-MIT.txt  README.md  align_by.ignore
src/: main.rs
src/tests/: aligning.rs  cancel.rs  mod.rs  pause_and_resume.rs  quote_gathering.rs  sorting.rs
