[package] # align_by "="
name        = "cargo-align"
version     = "0.1.2"
edition     = "2021"
authors     = ["MeGaGiGaGon <megagigagon@gmail.com>"]
license     = "MIT OR Apache-2.0"
description = "A simple tool for aligning code."
readme      = "README.md"
homepage    = "https://github.com/MeGaGiGaGon/cargo-align"
repository  = "https://github.com/MeGaGiGaGon/cargo-align"
keywords    = ["terminal", "cargo", "tool", "format", "alignment"]
categories  = ["command-line-utilities"]

[dependencies] # align_by "="
anyhow         = "1.0.86"
indoc          = "2.0.5"
clap           = {version = "4.5.16", features = ["cargo"]}
thiserror      = "1.0.63"
cargo_metadata = "0.18.1"
env_logger     = "0.11.5"
log            = "0.4.22"
ignore         = "0.4"
exitcode       = "1.1.2"
regex          = "1.10.6"
